force-app/main/default/objects/Account/fields/Deleted_From_Shopify__c.field-meta.xml
<CustomField>
    <fullName>Deleted_From_Shopify__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deleted From Shopify?</description>
    <label>Deleted From Shopify?</label>
    <type>Checkbox</type>
</CustomField>