force-app/main/default/objects/Account/fields/Shopify_External_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Shopify_External_System_Id__c</fullName>
    <externalId>true</externalId>
    <label>Shopify External System Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>