force-app/main/default/objects/Account/fields/Zendesk_External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_External_System_ID__c</fullName>
    <externalId>true</externalId>
    <label>Zendesk_External System ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>